@@ -183,7 +183,9 @@
 ||blenderelements.com^
 ||blogdodge.shop^
 ||blueskymonday.com^
+||bm-in.net^
 ||bmfuturesig.space^
+||bmnbn65977.icu^
 ||bmpnew.com^
 ||bmsigfut.com^
 ||bnfallshop.com^
@@ -269,6 +271,8 @@
 ||cmecoins.life^
 ||co2e6bnr.^
 ||codshoppy.com^
+||coineea.com^
+||coinupusa.com^
 ||coise.shop^
 ||colegioquiropracticochile.cl^
 ||comfortableife.com^
@@ -397,6 +401,7 @@
 ||empireking.co^
 ||empirekingh5api.site^
 ||empru.online^
+||encrypvts.vip^
 ||energysevencourse.com^
 ||enrfb.store^
 ||entiosat.com^
@@ -778,6 +783,7 @@
 ||lasvegascondotelsales.com^
 ||latestrends01.com^
 ||lavisualisation.lt.acemlnb.com^
+||lazadashop-twmall.com^
 ||lcspw.asia^
 ||leadquizzes.com^
 ||learnguitarplaying.com^
@@ -819,6 +825,7 @@
 ||long5688.net^
 ||longislandhomecenter.com^
 ||looiioiquwe.shop^
+||losuh.store^
 ||lotbud.shop^
 ||lovedot.us^
 ||lovelikewe.com^
@@ -853,6 +860,7 @@
 ||mbl-systemapp.com^
 ||mbobi.com^
 ||mccdn.me^
+||mchsg.com^
 ||mczlbxv.com^
 ||mdhl520.com^
 ||meiricaij.live^
@@ -1442,6 +1450,7 @@
 ||wof888.blogspot.com^
 ||wof888.com^
 ||wokqo.shop^
+||worldcoin35.com^
 ||wqajz2022.com^
 ||wsflbtgov.xyz^
 ||wsflbwgov.xyz^
@@ -1463,6 +1472,7 @@
 ||x68x.cn^
 ||x97fax.live^
 ||x97med.live^
+||xbto168.com^
 ||xc-bet.com^
 ||xdfaus.cn^
 ||xe2w.com^
@@ -1470,6 +1480,7 @@
 ||xgdfs.com^
 ||xggkimixu.com^
 ||xiapee.com^
+||xll31v.top^
 ||xlxxl.store^
 ||xn--299a.xn--3e0b707e^
 ||xn--ghq10gmvi961at1b479e.com^
