@@ -1,6 +1,7 @@
 # 歷史更新 History Update
 
 * 20230427 Update
+  * 加入 LineBot功能判斷LineID功能
   * 更新 個人不想看的廣告或網站
   * 更新 Dcard受害文章
   * 更新 FB網友提供清單
